# robotic_system

./: .gitmodules
kachaka-main/kachaka_ws/install/: local_setup.sh  setup.sh
robot_ws/: .gitignore  requirements.txt
robot_ws/data/Util/: Final_SEM_GS_converted_meta.json  actual_color_mapping.json  convert_sem_gs_exact.py  create_semantic_meta.py  downsample.py  get_timestamp.py  ply_to_npz.py  read_npz.py  read_ply.py  renumber_pairs.py  sample_timestamp.py  semantic_legend.json
robot_ws/data/lab/: align.py  align_map.py  auto_align.py  check.py  export_kachaka_map.py  kachaka_map.pgm  kachaka_map.yaml
robot_ws/data/lab/align_out/: result.json
robot_ws/robot_ws_backup_1770613118/src/decision_maker/: setup.py
robot_ws/robot_ws_backup_1770613118/src/decision_maker_interfaces/: CMakeLists.txt  package.xml
robot_ws/robot_ws_backup_1770613118/src/kachaka_interfaces/: CMakeLists.txt
robot_ws/robot_ws_backup_1770613118/src/kachaka_laser_api/: package.xml
robot_ws/robot_ws_backup_1770613118/src/kachaka_nav/: package.xml
robot_ws/robot_ws_backup_1770613118/src/semantic_slam/: setup.py
robot_ws/robot_ws_backup_1770613141/: environment.yml
robot_ws/robot_ws_backup_1770613141/robot_ws_backup_1770613118/: .gitignore
robot_ws/robot_ws_backup_1770613141/robot_ws_backup_1770613118/src/decision_maker/: CMakeLists.txt
robot_ws/robot_ws_backup_1770613141/robot_ws_backup_1770613118/src/decision_maker/decision_maker/: cancel_command_node.py  command_types.py  text_command_node.py
robot_ws/robot_ws_backup_1770613141/robot_ws_backup_1770613118/src/decision_maker/launch/: mock_actions.launch.py
robot_ws/robot_ws_backup_1770613141/robot_ws_backup_1770613118/src/semantic_slam/: package.xml  setup.cfg
robot_ws/robot_ws_backup_1770613141/robot_ws_backup_1770613118/src/semantic_slam_interfaces/: package.xml
robot_ws/robot_ws_backup_1770613141/src/decision_maker/: setup.cfg
robot_ws/robot_ws_backup_1770613141/src/map_alignment/: package.xml
robot_ws/robot_ws_backup_1770613141/src/object_query/: README.md  package.xml  setup.cfg
robot_ws/src/decision_maker/: package.xml  setup.py
robot_ws/src/kachaka_laser_api/: setup.cfg
robot_ws/src/kachaka_nav/: setup.cfg
robot_ws/src/map_alignment/: setup.cfg  setup.py
robot_ws/src/object_query/: setup.py
robot_ws/src/object_query_interfaces/: package.xml
robot_ws/src/semantic_slam/: README.md
(+102 files in other folders)
