<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_slam</name>
  <version>0.0.0</version>
  <description>Example SLAM action server using semantic_slam_interfaces.</description>
  <maintainer email="dohuuphu25@gmail.com">phudh</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>semantic_slam_interfaces</depend>
  <exec_depend>numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
